[gd_scene load_steps=2 format=3 uid="uid://bcn7ypx0qusqp"]

[ext_resource type="Script" path="res://src/components/projects/import_project_dialog/import_project_dialog.gd" id="1_dyj76"]

[node name="ImportProjectDialog" type="ConfirmationDialog"]
title = "Import Existing Project"
position = Vector2i(0, 36)
size = Vector2i(500, 202)
visible = true
ok_button_text = "Import & Edit"
script = ExtResource("1_dyj76")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="ProjectPath" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Project Path:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProjectPathEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 3

[node name="BrowseProjectPathButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Browse"

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Editor:"

[node name="EditorsOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
flat = true
unique_name_in_owner = true
custom_minimum_size = Vector2(213, 0)
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="VersionHintValue" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.701961)
layout_mode = 2
text = "version hint: x.y.z-stage"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="BrowseProjectPathDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(312, 157)
ok_button_text = "Open"
file_mode = 0
access = 2
